<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="lab04.eim.systems.cs.pub.ro.contactsmanager.MainActivity"
    tools:showIn="@layout/activity_main"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ToggleButton
            android:id="@+id/aditional_fields_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textOff="@string/show_additional_fields"
            android:textOn="@string/hide_additional_fields"
            android:layout_gravity="right" />
        <EditText
            android:id="@+id/name_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            />
        <EditText
            android:id="@+id/phone_number_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            />
        <EditText
            android:id="@+id/email_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            />
        <EditText
            android:id="@+id/address_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/save"
                />
            <Button
                android:id="@+id/cancel_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>
        <EditText
            android:id="@+id/job_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_title"
            android:visibility="invisible"
            />
        <EditText
            android:id="@+id/company_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company"
            android:visibility="invisible"
            />
        <EditText
            android:id="@+id/web_site"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/web_site"
            android:visibility="invisible"
            />
        <EditText
            android:id="@+id/IM"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/IM"
            android:visibility="invisible"
            />

    </LinearLayout>

</ScrollView>